\name{minfinews}
\title{Minfi News}
\encoding{UTF-8}

\section{Version 1.29}{
  \itemize{
    \item {v1.29.4} Fixed a bug in \code{detectionP} where the function
    always returned NA for a 27k array. Reported by Laurenz Holcik.
    \item {v1.29.4} Fixed a bug in \code{preprocessNoob} where the
    function would error when supplied an input data set with only 1
    sample (when using default arguments). Reported by Matt Oldach.
  }
}

\section{Version 1.27}{
  \itemize{
    \item {v1.27.2} Fix bug in \code{preprocessQuantile()} that arose when
    checking input for previous preprocessing method. Thanks to @DelnazR for
    the report (\url{https://github.com/hansenlab/minfi/issues/165}).
    \item {v1.27.3} Fixed bug related to switch A and B for SNPs of type
    I when using convertArray / combineArrays.  Reported by Jenny van
    Dongen.
    \item {v1.27.3} Fixed error in dmpFinder.
    \item Added preliminary support for HorvathMammalMethylChip40.
  }
}

\section{Version 1.26}{
  \itemize{
    \item \code{v1.26.1}: \code{dmpFinder()} again works when \code{dat} is
    a numeric matrix. This bug was introduced in \code{v1.26.0} during the
    transition to support DelayedArray-backed minfi objects. Thanks to
    @ralowe for the report (#163).
    \item Changed default annotation for EPIC arrays to B4 from B2.
  }
}

\section{Version 1.25}{
  \itemize{
    \item Added preliminary support for DelayedArray-backed minfi objects. This
    allows disk-backed minfi objects (e.g., using HDF5). This functionality is
    currently recommended only for developers and advanced users. A
    user-friendly interface is currently in development. All existing minfi
    functionality and serialized objects should continue to work as it did in
    versions prior to 1.25. Please report any problems to the GitHub issue
    tracker.
    \item Fixing bug in functions readGEORawFile() and
    getGenomicRatioSetFromGEO(). These two functions did not work